Добавил сохранение токена и логина пользователя в localStorage.
1) Убрал лишние миграции
2) Поменял возвращаемые значения у методов в контроллере AuthController.php. Также частично поменял документацию у этих методов.
3) Немного изменил Login.jsx, SignUp.jsx, MainLayout.jsx, ContextProvider.jsx. в react.
